[project]
name = "graspnet-baseline"
version = "0.1.0"
description = "Baseline model for GraspNet benchmark with viser visualization"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "numpy<2",
    "scipy",
    "Pillow",
    "tqdm",
    "tensorboard",
    "viser>=0.2.0",
    "trimesh",
    "gdown",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
